--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -86,7 +86,14 @@ html {
 			top:1em;
 		}
 	}
-
+// text_unselectable
+	.text_unselectable {
+		-webkit-user-select: none !important;
+		-khtml-user-select: none !important;
+		-moz-user-select: none !important;
+		-o-user-select: none !important;
+		user-select: none !important;
+	}
 
 // temporal debug css
 	section {		
