--- a/lib/dedalo/page/css/layout/paginator.less
+++ b/lib/dedalo/page/css/layout/paginator.less
@@ -2,12 +2,15 @@
 ------------------------------------------------------- */
 	.css_wrap_rows_paginator {
 		/* float: left; */
-		min-height: 28px;
-		top: 4px;
-		position: relative;
-		float: left;
+		//min-height: 28px;
+		//top: 4px;
+		//position: relative;
+		//float: left;
 
-		// ICONS BOOTSTRAP 
+		line-height: 1em;
+		padding: 0.5em;
+
+			// ICONS BOOTSTRAP 
 			.icon_bs {
 				display: inline-block;
 				width: 14px;
@@ -73,7 +76,8 @@
 		}
 		.css_wrap_rows_paginator .css_rows_paginator_content .css_rows_paginator_div_links {
 			display: inline-block;
-			float: none;		
+			float: none;
+			vertical-align: middle;		
 			}
 			.css_rows_paginator_div_links a {
 				margin-left: 5px;
@@ -161,5 +165,11 @@
 				opacity: 0.4;
 				cursor: default !important;
 			}
+		}
+
+		#go_to_page {
+			text-align: center;
+			padding: 0.17em;
+			margin-left: 2px;
 		}
 
