--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -1,16 +1,11 @@
 
-// fontawesome
-	@import "./fontawesome/less/fontawesome.less";
-	@import "./fontawesome/less/solid.less";
-	@import "./fontawesome/less/brands.less";
 
 // layout general
 	/**/
-	@import "layout/reset.less";
-	@import "layout/fonts.less";
-	@import "layout/layout.less"; 
-	@import "layout/page.less";
-	@import "layout/paginator.less";
+	@import "./layout/reset.less";
+	@import "./layout/fonts.less";
+	@import "./layout/layout.less"; 
+	@import "./layout/page.less";
 
 // groupers
 	/**/
@@ -18,11 +13,15 @@
 	@import "../../section_tab/css/section_tab.less";
 
 // services
+	@import "./layout/paginator.less";
 	@import "../../services/service_autocomplete/css/service_autocomplete.less";
-
 
 // menu
 	@import "../../menu/css/menu.less";
+	////@import "../../../bootstrap/less/bootstrap.less";
+	//@import "../../../bootstrap/less/variables.less";
+	//@import "../../../bootstrap/less/glyphicons.less";
+	
 
 
 // components
