--- a/lib/dedalo/page/css/layout/reset.less
+++ b/lib/dedalo/page/css/layout/reset.less
@@ -81,9 +81,10 @@
 	//}
 
 	pre {
-		background-color: rgba(240, 248, 255, 0.4);
+		background-color: rgba(240, 248, 255, 0.68);
 		padding: 1em;
 		font-family: monospace;
+		z-index: 9999;
 	}
 
 
