add change_mode to css

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -326,6 +326,12 @@
 				&:before {
 					content: @fa-var-power-off;
 				}
+			}&.change_mode {
+				.fa-icon;
+		  		.fas;
+		  		&:before {
+					content: @fa-var-pen;
+				}
 			}
 		
 		}//end .active &, &.link
