add search to the css changed the name

--- a/lib/dedalo/page/css/main.less
+++ b/lib/dedalo/page/css/main.less
@@ -14,6 +14,7 @@
 
 // services
 	@import "./layout/paginator.less";
+	@import "../../search/css/search.less";
 	@import "../../services/service_autocomplete/css/service_autocomplete.less";
 
 // menu
