add destroy to the paginator

--- a/lib/dedalo/page/css/layout/paginator.less
+++ b/lib/dedalo/page/css/layout/paginator.less
@@ -36,6 +36,11 @@
 				&:active {
 					opacity: 0.4
 				}
+
+				&.unactive {
+					opacity: 0.4;
+					cursor: default;
+				}
 			}
 
 		}//end .css_wrap_rows_paginator
