Fix the list components with context in search

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -84,8 +84,8 @@
 		}
 		// Root Target container
 		.search_container_selector {
-			//display: flex;
-			display: none;
+			display: flex;
+			//display: none;
 		}
 		// Selection (drag)
 		.search_container_selection {
