--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -70,8 +70,12 @@ html {
 		//display: none !important;
 		visibility: hidden !important;
 		opacity: 0;
-		transition: visibility 0.25s, height 0.25s, opacity 0.25s linear;				
+		transition: visibility 0.25s, height 0.25s, opacity 0.25s linear;
 		height: 0;
+	}
+// display_none
+	.display_none {
+		display: none !important;		
 	}
 // debug
 	.debug {
