Add css for filter_button

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -348,8 +348,14 @@
 					content: @fa-var-align-justify;
 				}
 			}
-			
-		
+			&.search {
+				.fa-icon;
+				.fas;
+				&:before {
+					content: @fa-var-search;
+				}
+			}
+					
 		}//end .active &, &.link
 		
 	}//end .button
