Add new operator $or_link to filter dom options

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -2,26 +2,26 @@
 @common_css: "../../common/css";
 
 // Usage
-@import "@{common_css}/library.less"; 
+@import "@{common_css}/library.less";
 
 
 
 	/* SEARCH
 	------------------------------------------------------- */
-		/*	
+		/*
 		.css_rows_search_tap {
-			// background-color: #e7e7e7; 
+			// background-color: #e7e7e7;
 			cursor: pointer;
 			width: auto;
 			padding: 5px;
-			// background-image: none; 
+			// background-image: none;
 			padding-left: 10px;
 			padding-right: 10px;
-			// display: inline-block; 
+			// display: inline-block;
 			border-radius: 5px;
-			// border-top-right-radius: 5px; 
-			// z-index: 0; 
-			// margin-left: 5px; 
+			// border-top-right-radius: 5px;
+			// z-index: 0;
+			// margin-left: 5px;
 			-moz-user-select: none;
 			-khtml-user-select: none;
 			-webkit-user-select: none;
@@ -35,10 +35,10 @@
 				color: #CCCCCC;
 				box-shadow: 2px 2px 16px #888888;
 			}
-		}		
-			
+		}
+
 		.css_rows_search_content {
-			padding: 10px;	
+			padding: 10px;
 			box-shadow: 2px 2px 8px #888888;
 			background-color: rgba(245,245,245,0.96);
 			z-index: 1;
@@ -83,7 +83,7 @@
 
 
 /* MAX_ROWS (COMPONENT MAX ROWS)
-------------------------------------------------------- 
+-------------------------------------------------------
 	.css_wrap_max_rows {
 		padding: 0px;
 		padding-left: 5px;
@@ -95,7 +95,7 @@
 			vertical-align: middle;
 		}
 	}
-	
+
 
 	.css_max_rows {
 		padding: 2px;
@@ -107,7 +107,7 @@
 		height: 22px;
 		vertical-align: middle;
 		margin-right: 39px;
-	
+
 		&:hover {
 			background-color: #F1F1F1;
 		}
@@ -115,7 +115,7 @@
 			box-shadow: 0 0 5px #CCC;
 		}
 	}
-	*/	
+	*/
 
 
 
@@ -133,7 +133,7 @@
 		// border: 1px solid #e6e6e6;
 		overflow: hidden;
 		margin-right: 0px;
-	
+
 		.max_input_label {
 			display: block;
 			width: 100%;
@@ -151,11 +151,11 @@
 			font-size: 1.2em;
 		}
 	}
-			
+
 
 
 	/* BUTTON_RESET
-	------------------------------------------------------- 
+	-------------------------------------------------------
 		.css_wrap_button_reset {
 			display: inline-block;
 			padding: 3px;
@@ -179,7 +179,7 @@
 				color: #FFFFFF;
 			}
 		}
-		*/	
+		*/
 
 
 
@@ -207,7 +207,7 @@
 			padding-right: 5px;
 			margin-left: 10px;
 			margin-top: 5px;
-		} */	
+		} */
 		#search_response {
 			margin-left: 10px;
 			margin-top: 5px;
@@ -215,7 +215,7 @@
 
 
 
-/* NAVIGATOR 
+/* NAVIGATOR
 ------------------------------------------------------- */
 	.css_wrap_rows_paginator {
 		/* float: left; */
@@ -234,7 +234,7 @@
 			margin: 0;
 			padding: 0;
 			padding-left: 15px;
-			position: relative;    
+			position: relative;
 		}
 		.css_wrap_rows_paginator_edit {
 			position: relative;
@@ -242,7 +242,7 @@
 			top: 10px;
 		}
 		/* navigator showed in section list */
-		.wrap_section_list .css_wrap_rows_paginator .css_rows_paginator_content {		
+		.wrap_section_list .css_wrap_rows_paginator .css_rows_paginator_content {
 			top: 4px;
 			@media screen and (max-width: @movil_max_width) { // 768px
 				top: 0;
@@ -261,7 +261,7 @@
 		}
 		.css_wrap_rows_paginator .css_rows_paginator_content .css_rows_paginator_div_links {
 			display: inline-block;
-			float: none;		
+			float: none;
 			}
 			.css_rows_paginator_div_links a {
 				margin-left: 5px;
@@ -273,7 +273,7 @@
 				font-weight: normal;
 				border: none;
 				border-radius: 3px;
-				color: #F7F7F7;			
+				color: #F7F7F7;
 				box-shadow: 1px 1px 2px #888888;
 				background-color: #BF9C3B;
 			}
@@ -299,9 +299,9 @@
 			//background-image: url('../../themes/default/icon_arrow_next.png');
 			//background-position: center;
 			//top: 1px;
-			background-position: -264px -72px;		
+			background-position: -264px -72px;
 			//transform: rscale(1.3, 1.3);
-			transform: scale(1.3, 1.3);		
+			transform: scale(1.3, 1.3);
 			margin-left: 4px;
 			//background-color: #F9D565;
 		}
@@ -326,13 +326,13 @@
 			opacity: 0.1 !important;
 		}
 
-		.css_section_list_wrap .css_wrap_rows_paginator .css_rows_paginator_content .css_rows_paginator_div_links {	
-			@media screen and (max-width: @movil_max_width) { // 768px		
+		.css_section_list_wrap .css_wrap_rows_paginator .css_rows_paginator_content .css_rows_paginator_div_links {
+			@media screen and (max-width: @movil_max_width) { // 768px
 				zoom: 1.7;
 				padding-bottom: 5px;
 				}
 		}
-		
+
 		#sidebar .css_wrap_rows_paginator {
 			@media screen and (max-width: @movil_max_width) { // 768px
 				//height: 28px;
@@ -353,9 +353,9 @@
 
 
 
-/* SEARCH 2 
+/* SEARCH 2
 ----------------------------------------------------------------------------------------- */
-	// selected_color 
+	// selected_color
 	@selected_color  : #ff9620; // @color_orange;	//
 	// Component color
 	@component_color : lighten(@selected_color, 25%);
@@ -424,12 +424,12 @@
 			}
 		// Button toggle container_selector
 		#toggle_container_selector {
-			
+
 			}
 		// Button toggle presets
 		#toggle_container_selection_presets {
-			
-			}	
+
+			}
 
 
 	// Standard section container (receive all json elements inside)
@@ -443,7 +443,7 @@
 		display: flex;
 		background-color: rgba(201,201,201,0.3);
 	}
-	
+
 		// Section label bar
 		.search_section_bar_label {
 			font-family: "Oxygen-light";
@@ -451,7 +451,7 @@
 			padding-left: 4px;
 			padding-right: 4px;
 			border-right: 1px solid #a5a5a5;
-			//background-color: @bg_color_global;  
+			//background-color: @bg_color_global;
 			background-color: #575a5c;;
 			color: #ffffff;
 			// Avoid click events affect here (received with :after)
@@ -460,7 +460,7 @@
 			.target_container > .search_section_container > .search_section_bar_label::after {
 				content: "X";
 				display: block;
-				// background-color: #a0a0a0; 
+				// background-color: #a0a0a0;
 				float: right;
 				width: 15px;
 				text-align: center;
@@ -472,11 +472,11 @@
 				// Allow receive here the click button of real dom element
 				pointer-events: all;
 			}
-		
+
 
 		// Items list generic
 		.search_section_container ul {
-			position: relative;	
+			position: relative;
 			min-width: 140px;
 			}
 			.search_section_container ul li {
@@ -486,7 +486,7 @@
 				-moz-user-select: none;
 			-khtml-user-select: none;
 			-webkit-user-select: none;
-			user-select: none;	
+			user-select: none;
 			}
 
 		// Items list section_group
@@ -498,7 +498,7 @@
 		li.search_component_label {
 			background-color: @bg_component_color;
 			//background-color: rgba(251, 251, 251, 0.48);
-			border-bottom: 0.5px solid #666;			
+			border-bottom: 0.5px solid #666;
 			}
 			li.search_component_label:hover {
 				background-color: @component_color_hover;
@@ -530,7 +530,7 @@
 				right: 8px;
 				margin-top: 3px;
 			}
-			
+
 			li.search_component_label.has_subquery:active {
 			}
 			li.search_component_label.has_subquery.active {
@@ -542,7 +542,7 @@
 			li.search_component_label.has_subquery.active::after {
 				border-left: 5px solid #ffffff;
 			}
-		
+
 		// Draggable backgroud svg
 		.element_draggable {
 			/*
@@ -589,7 +589,7 @@
 					position: sticky;
 					top: 60px;
 				}
-				.search_group {					
+				.search_group {
 					border: 0.5px solid #b9b9b9;
 					padding: 5px;
 					padding-right: 24px;
@@ -602,11 +602,11 @@
 					min-width: 165px;
 					background-color: rgba(255, 255, 255, 0.5);
 					resize: both;
-					overflow: -webkit-paged-x;					
+					overflow: -webkit-paged-x;
 					position: relative;
 					display: flex;
 					flex-grow: 2;
-					flex-wrap: wrap;									
+					flex-wrap: wrap;
 					}
 					.search_group > .operator {
 						//background-color: #9cd950;
@@ -633,9 +633,9 @@
 						height: 100%;
 						position: absolute;
 						left: 0;
-						top: 0;	
+						top: 0;
 						margin: 0;
-						opacity: 0.6;				
+						opacity: 0.6;
 					}
 					.search_group > .operator:hover {
 						opacity: 0.7;
@@ -645,6 +645,9 @@
 					}
 					.search_group > .operator.or {
 						background-color: #3379b8;
+					}
+					.search_group > .operator.or_link {
+						background-color: #E96400;
 					}
 				#root_search_group {
 					margin: 0;
@@ -679,7 +682,7 @@
 			/* search_component
 			-------------------------- */
 			#search2_container_selection .search_component {
-				//background-color: lighten(@component_color, 10%); 
+				//background-color: lighten(@component_color, 10%);
 				background-color: rgba(251, 251, 251, 0.48);
 				display: flex;
 				flex-direction: row-reverse;
@@ -689,7 +692,7 @@
 				border: 1px solid #e6e6e6;
 				// Experimental all same width
 				// width: 300px;
-				flex-basis: 32%;				
+				flex-basis: 32%;
 				min-height: 55px;
 				border-radius: 2px;
 				}
@@ -699,7 +702,7 @@
 					color: #fcf4ff;
 					margin: 0;
 					padding: 4px;
-					text-align: center;					
+					text-align: center;
 					//transform: rotate(90deg);
 					//transform-origin: top left;
 					//height: 20px;
@@ -810,16 +813,16 @@
 				ul#component_presets_list > li {
 					line-height: 2em;
 					border-bottom: 1px solid #dbdbdb;
-					padding: 5px;					
+					padding: 5px;
 					padding-bottom: 1px;
 					padding-top: 1px;
 					position: relative;
-					//display: flex;					
+					//display: flex;
 				}
 				ul#component_presets_list > li.selected {
 					//font-weight: bold !important;
 					color: #000000;
-					font-family: "Oxygen-bold";					
+					font-family: "Oxygen-bold";
 				}
 				.component_presets_button_load, .component_presets_button_options, .component_presets_button_delete {
 					position: absolute;
@@ -833,19 +836,19 @@
 					//background-position: -192px -72px; // step backward
 					background-position: -432px -72px;
 					transform: scale(1.21);
-					//-moz-transform: scale(1.21);				    
+					//-moz-transform: scale(1.21);
 					top: 6px;
 					left: 2px;
 				}/*
 				.component_presets_button_options {
-					background-position: -432px 0; // options											
+					background-position: -432px 0; // options
 					zoom: 121%;
 					-moz-transform: scale(1.21);
 					margin-right: 3px;
-				}*/				
+				}*/
 				.component_presets_button_delete {
-					background-position: -456px 0;														
-					margin-left: 5px;					
+					background-position: -456px 0;
+					margin-left: 5px;
 					right: 5px;
 					top: 5px;
 				}
@@ -854,7 +857,7 @@
 					// padding: 2px;
 					// padding-left: 15px;
 				}
-				
+
 
 
 			/* div_edit
@@ -863,8 +866,8 @@
 					background-color: #cfcfcf;
 					display: flex;
 					flex-flow: column;
-					border-radius: 2px;	
-					//width: 100%;			
+					border-radius: 2px;
+					//width: 100%;
 					}
 					/*.div_edit:before {
 						content: " ";
@@ -927,7 +930,7 @@
 	/* SEARCH_OPTIONS_TITLE
 	----------------------------------------- */
 		.search_options_title_item {
-			
+
 			}
 			.search_options_title_item > span {
 				display: inline-block;
