Change size and position of Search query object test enviroment in tool_administration

--- a/lib/dedalo/tools/tool_administration/css/tool_administration.less
+++ b/lib/dedalo/tools/tool_administration/css/tool_administration.less
@@ -5,8 +5,8 @@
 @import "@{common_css}/library.less";
 
 
-	
-.wrap_tool_administration_page {	
+
+.wrap_tool_administration_page {
 	display: block;
 	width: 99.99%;
 	}
@@ -48,12 +48,12 @@
 		.checkbox label span {
 			vertical-align: sub;
 		}
-	
+
 	.panel_option_subcontent {
 		padding-left: 15px;
 		/*background-color: #AFCCF6*/
 	}
-	.panel_option_subcontent input {		
+	.panel_option_subcontent input {
 	}
 	.panel_option_subcontent div,
 	.panel_option_subcontent pre,
@@ -100,7 +100,7 @@
 		background-color: #F4800C;
 		color: #FFFFFF;
 		border-radius: 6px 6px 0px 0px;
-		font-size: 1.3em;		
+		font-size: 1.3em;
 		margin-top: 5px;
 
 	}
@@ -122,7 +122,7 @@
 		font-size: 4em;
 		border: 1px solid #eee ;
 	}
-	.vkey_value {		
+	.vkey_value {
 		padding: 10px;
 		display: block;
 		color: #000;
@@ -162,12 +162,12 @@
 
 
 
-	// editor_json
-		.editor_json {
-			height:500px;
-			resize: vertical;
-			overflow: scroll;
-		}
+// editor_json
+	.editor_json {
+		height:90vh;
+		resize: vertical;
+		//overflow: scroll;
+	}
 
 
 
