--- a/lib/dedalo/page/css/layout/page.less
+++ b/lib/dedalo/page/css/layout/page.less
@@ -73,6 +73,13 @@ html {
 		transition: visibility 0.25s, height 0.25s, opacity 0.25s linear;
 		height: 0;
 	}
+// hidden
+	.hidden2 {
+		visibility: hidden;
+		//opacity: 0 !important;
+		//height: 0px !important;
+		//display: none !important;
+	}
 // display_none
 	.display_none {
 		display: none !important;		
