Added css for send email button icon.

--- a/lib/dedalo/page/css/layout/layout.less
+++ b/lib/dedalo/page/css/layout/layout.less
@@ -359,7 +359,13 @@
 					content: @fa-var-search;
 				}
 			}
-					
+			&.email_send {
+				.fa-icon;
+				.fas;
+				&:before {
+					content: @fa-var-envelope;
+				}
+			}					
 		}//end .active &, &.link
 		
 	}//end .button
